--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - unifi-work:/usr/lib/unifi/work
     restart: unless_stopped
   pihole:
-    build: ./pihole
+    image: pihole/pihole:v5.6
     ports:
       - "53:53/tcp"
       - "53:53/udp"
@@ -51,7 +51,8 @@ services:
     dns:
       - 127.0.0.1
       - 1.1.1.1
-    network_mode: host
+    cap_add:
+      - NET_ADMIN
     restart: unless_stopped
   cups:
     build: ./cups
